--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -110,6 +110,25 @@
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 				</ion-list>
+
+				<ion-list>
+					<div class="item item-divider"><strong>Developer Settings</strong></div>
+
+					<ion-item item-toggle>
+						<div class="avatar-icon-placeholder"></div>Show tile PKs
+						<label class="toggle toggle-balanced">
+						<input type="checkbox" 
+							ng-click="setPreference('showPK')"
+							ng-model="appPrefs.showPK">
+							<div class="track">
+								<div class="handle"></div>
+							</div>
+						</label>
+						<p style="color:#8F8F8F; padding:3px; font-weight:bold; font-style:italic;">Show the PK for each tile</p>
+					</ion-item>
+
+					
+				</ion-list>
 			</div>
 
 <!-- Settings Access Panel -->
