--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -591,6 +591,7 @@ input[type="text"]:focus, textarea:focus {
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 30px;
+  padding-right: 30px;
   font-size: 1.2em;
   width: 70%; }
 
