Removed pk from selected tiles

--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -64,7 +64,7 @@
             <div class="word-builder">
               <div class="word-builder-input" style="margin-left:-15px">
                 <div class="tile" ng-repeat="symbol in selectedTiles">
-                  {{ symbol.word }} {{symbol.pk }}<br>
+                  {{ symbol.word }}<br>
                   <img src = "{{symbol.symbol.image}}"
                     style="width:40px;height:40px">
                 </div>
