Changes to make settings faster.

--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -155,9 +155,9 @@
 					<div class="settings-box">
 						<p>Synthetic Voices</p>	
 						<ion-list>
-							<ion-radio type="radio" style="border-color:white;" ng-model="voice.name" value="jane"><span class="checkbox-text">Jane</span><i class="icon ion-play"></i></ion-radio>
-							<ion-radio type="radio" style="border-color:white;" ng-model="voice.name" value="malik"><span class="checkbox-text">Malik</span><i class="icon ion-play"></i></ion-radio>
-							<ion-radio type="radio" style="border-color:white;" ng-model="voice.name" value="name"><span class="checkbox-text">Name</span><i class="icon ion-play"></i></ion-radio>
+							<ion-radio type="radio" style="border-color:white;" ng-model="voice.name" value="Vicki"><span class="checkbox-text">Vicki</span><i class="icon ion-play"></i></ion-radio>
+							<ion-radio type="radio" style="border-color:white;" ng-model="voice.name" value="Alex"><span class="checkbox-text">Alex</span><i class="icon ion-play"></i></ion-radio>
+							<ion-radio type="radio" style="border-color:white;" ng-model="voice.name" value="Victoria"><span class="checkbox-text">Victoria</span><i class="icon ion-play"></i></ion-radio>
 						</ion-list>
 					</div>
 
@@ -165,7 +165,7 @@
 						<p>Voice Speed</p>
 						<div class="item range" style="border-color:white;">
 							<div class="avatar-icon-placeholder"></div>
-							<input type="range" name="synth-volume" min="0" max="100" value="33" ng-model="voice.volume">
+							<input type="range" name="synth-volume" min="0" max="100" value="33" ng-model="voice.speed">
 							<div class="avatar-icon-placeholder"></div>
 						</div>
 					</div>
