fixed extra back issue with divs

--- a/aac-ionic/scss/ionic.app.scss
+++ b/aac-ionic/scss/ionic.app.scss
@@ -191,6 +191,14 @@ a#btn-styling.button.button-outline.button-small{
   float:left; 
 }
 
+/*.boards{
+  background: url('../img/new_dev_assets/board_tile_notched_default_1.svg');
+}*/
+
+/*.boards.activated{
+  background: url('../img/new_dev_assets/board_tile_notched_default_yellow.svg');
+}*/
+
 #bodyBack{
   background:$speak-agent-dark-blue;
   // text-align: center;
