--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -141,6 +141,12 @@ a#btn-styling.button.button-outline.button-small {
   margin-top: -20px;
   float: left; }
 
+/*.boards{
+  background: url('../img/new_dev_assets/board_tile_notched_default_1.svg');
+}*/
+/*.boards.activated{
+  background: url('../img/new_dev_assets/board_tile_notched_default_yellow.svg');
+}*/
 #bodyBack {
   background: #008485; }
 
@@ -214,12 +220,6 @@ button#btn-styling.button.button-outline.button-calm.button-small.selected-btn2 
   height: 75px;
   background-color: #008485;
   border-radius: 37.5px; }
-
-.button-circle2.activated {
-  border: 5px solid #F8D338;
-  width: 80px;
-  height: 80px;
-  border-radius: 40px; }
 
 .yellow {
   border: 5px solid #F8D338;
@@ -499,14 +499,6 @@ input[type="text"]:focus, textarea:focus {
 
 #newboard2 {
   padding: 10px 30px 30px 25px; }
-
-.boards{
-  background: url('../img/new_dev_assets/board_tile_notched_default_1.svg');
-}
-
-.boards.activated{
-  background: url('../img/new_dev_assets/board_tile_notched_default_yellow.svg');
-}
 
 .new-board-placeholder {
   height: 650px;
