--- a/aac-ionic/www/templates/board_factory.html
+++ b/aac-ionic/www/templates/board_factory.html
@@ -34,8 +34,8 @@
             <!-- ng-click="chosenBoard2($index)" -->
             <a href="#/board_factory/edit/{{board.pk}}" ng-click="chosenBoard($index)">
               <!-- <div class="about-circle" ng-if="aboutcircle == true"></div> -->
-              <p style="position:fixed; z-index:3; margin-top:25px; margin-left:15px;" ng-model="titleLimit">{{board.name | limitTo: titleLimit}} <span ng-show="board.name.length > titleLimit">...</span></p>
-
+              <p style="position:fixed; z-index:3; margin-top:25px; margin-left:15px;" ng-model="titleLimit">{{board.name}} <span ng-show="board.name.length > titleLimit">...</span></p>
+              <!-- | limitTo: titleLimit -->
               <img ng-src="{{board.img_path}}" alt="image" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-70px;"\>
 
               <img src="img/new_dev_assets/board_tile_notched_default_1.svg" style="positon:relative; z-index:0;" alt="board tile">
