--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -107,25 +107,25 @@
 <!-- Bottom function buttons -->
         <div class="row" id="btn-section">
           <div class="col col-10" id="home-button-section">
-            <div class="button-circle2" ng-click="homeButton()">
+            <div class="button-circle" ng-click="homeButton()">
               <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
             </div>
           </div>
 
           <div class="col col-60">
-            <div class="button-circle">
-              <img src="img/new_dev_assets/bell.png" style="margin-left:17px; margin-top:14px;" />
+            <div class="button-circle pull-left" ng-click="bellSound()" >
+              <img src="img/new_dev_assets/bell.png" style="margin-left:17px; margin-top:14px;"/>
             </div>
 
-            <div class="button-circle">
-              <img src="img/new_dev_assets/colors.png" style="margin-left:15px; margin-top:14px;" ng-click="openModal()" />
+            <div class="button-circle pull-left" ng-click="openModal()">
+              <img src="img/new_dev_assets/colors.png" style="margin-left:15px; margin-top:14px;" />
             </div>
 
-            <div class="button-circle">
+            <div class="button-circle pull-left">
               <img src="img/new_dev_assets/avatar.png" style="margin-left:15px; margin-top:14px;" />
             </div>
 
-            <div class="button-circle">
+            <div class="button-circle pull-left">
               <img src="img/new_dev_assets/chat.png" style="margin-left:15px; margin-top:14px;" />
             </div>
           </div>
