--- a/aac-ionic/www/css/style.css
+++ b/aac-ionic/www/css/style.css
@@ -12,3 +12,31 @@
 .inactive {
     background-color: #BFBFBF !important;
 }
+
+.pickme-active{
+	background-color: #50e2e3 !important;
+}
+
+.button-pickme{
+	font-weight: bold;
+	color: #038485 !important;
+	padding: 2px 10px;
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	border: 2px solid #068a8b;
+	background: #FFFFFF;
+    position: relative;
+    top: -20px;
+}
+
+.buddy-choice {
+    background-color: #ffffff;
+    border: 2px solid #50e2e3;
+    border-radius: 12px;
+    height: 135px;
+    width: 135px;
+    float: left;
+    text-align: center;
+    margin: 0px auto 10px 17%;
+}
