--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -61,8 +61,9 @@
                 <img src = "{{symbol.symbol.image}}"
                   style="width:40px;height:40px">
               </div>
-              <img ng-src="{{ imageUrl }}" id="home-section"
-                ng-click="deleteLastTile()" on-tap="onTap()"/>
+              <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
+
+              <img ng-src="img/chat_buddies/{{selectedBuddy}}" style="width:12%;float:right;margin-top:-15px;display:block;margin-right:-10.5rem" ng-show="activeChat"/>
             </div>
           </div>
 
