--- a/aac-ionic/www/templates/settings.html
+++ b/aac-ionic/www/templates/settings.html
@@ -32,7 +32,9 @@
 					<div class="item item-divider"><strong>General</strong></div>
 
 					<ion-item item-toggle>
-						<div class="avatar-icon-placeholder"></div> Compaction
+						<div class="avatar-icon-placeholder">
+							<img src="img/AAC_assets/icon-compaction.png" />
+						</div> Compaction
 						<label class="toggle toggle-balanced">
 						<input type="checkbox">
 							<div class="track">
@@ -59,7 +61,9 @@
 					</ion-item> -->
 
 					<ion-item ng-click="panel(6)" id="aboutMe">
-						<div class="avatar-icon-placeholder"></div>About Me Profile
+						<div class="avatar-icon-placeholder">
+							<img src="img/AAC_assets/icon-aboutme.png" />
+						</div>About Me Profile
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 				</ion-list>
@@ -68,7 +72,9 @@
 					<div class="item item-divider"><strong>Interface</strong></div>
 
 					<ion-item ng-click="panel(2)" id="synthetic">
-						<div class="avatar-icon-placeholder"></div>Synthetic Voice
+						<div class="avatar-icon-placeholder">
+							<img src="img/AAC_assets/icon-synthetic-voice.png" />
+						</div>Synthetic Voice
 						<span class="item-note"><i class="icon ion-chevron-right"></i></span>
 					</ion-item>
 
