--- a/aac-ionic/www/css/style.css
+++ b/aac-ionic/www/css/style.css
@@ -9,3 +9,29 @@
     height: 30px;
     border-radius: 8px;
 }
+
+.done {
+    color: #589317;
+    border: 3px solid #589317;
+    border-radius: 18px;
+}
+
+.done:active {
+    color: #fff;
+    background-color: #589317;
+}
+
+.cancel {
+    color: #9b9b9b;
+    border: 3px solid #9b9b9b;
+    border-radius: 18px;
+}
+
+.cancel:active {
+    color: #fff;
+    background-color: #9b9b9b;
+}
+
+i.fa {
+    margin-right: 6px;
+}
