--- a/aac-ionic/www/css/style.css
+++ b/aac-ionic/www/css/style.css
@@ -1,22 +1,15 @@
-.play {
-	width: 50%;
-    position: relative;
-    left: 30%;
-    top: 4.5%;
-}
-
-.replay {
-	width: 50%;
-    position: relative;
-    left: 30%;
-    top: 4.5%;
+.play, .replay {
+	position: absolute;
+	left: 3%;
+	width: 40px;
+	margin: 0 auto;
+	display: block;
+	top: 5%;
 }
 
 .playing {
     margin-top: -50px;
 }
-
-
 
 .replaying {
     margin-top: -50px;
