Added tile click yellow background for pronouns words.

--- a/aac-ionic/www/css/ionic.app.css
+++ b/aac-ionic/www/css/ionic.app.css
@@ -653,6 +653,10 @@ input[type="text"]:focus, textarea:focus {
   background-color: #83EFF0;
   border-color: white; }
 
+.tile.lightYellow {
+  background-color: #FFEFAD;
+  border-color: #979797 }
+
 .tile.lightBlue {
   background-color: #83EFF0;
   border-color: white; }
