--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -41,13 +41,7 @@
     <div class="row" id="regularRow">
       <div class="col col-10" id="regularRowBod">
 
-        <div ng-click="sayPhrase()" ng-show="!activeChat">
-          <img src="img/AAC_assets/avatar_default.png"/>
-          <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
-          <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
-        </div>
-
-        <div ng-click="callBuddy()" ng-show="activeChat">
+        <div ng-click="sayPhrase()">
           <img src="img/AAC_assets/avatar_default.png"/>
           <img src="img/AAC_assets/play.png" alt="Play" class="play" ng-show="play">
           <img src="img/AAC_assets/replay.png" alt="Play" class="replay" ng-show="replay">
@@ -60,7 +54,7 @@
           {{ phrase }}
         </div>
 
-         <div class="regulars" ng-click="chosenTile(quickbar.lexeme); sayWord();">
+         <div class="regulars" ng-click="chosenTile(quickbar.lexeme); sayWord()">
             <span ng-bind="quickbar.lexeme.lexeme | limitTo: titleLimit"></span>
             <span ng-show="quickbar.lexeme.lexeme.length > titleLimit">...</span>
             <br />
@@ -68,7 +62,7 @@
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme2);sayWord();">
+          <div class="regulars" ng-click="chosenTile(quickbar.lexeme2);">
             <span ng-bind="quickbar.lexeme2.lexeme | limitTo: titleLimit"></span>
             <span ng-show="quickbar.lexeme2.lexeme.length > titleLimit">...</span>
             <br />
@@ -76,7 +70,7 @@
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme3);sayWord();">
+          <div class="regulars" ng-click="chosenTile(quickbar.lexeme3);">
             <span ng-bind="quickbar.lexeme3.lexeme | limitTo: titleLimit"></span>
             <span ng-show="quickbar.lexeme3.lexeme.length > titleLimit">...</span>
             <br />
@@ -84,7 +78,7 @@
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme4); sayWord();">
+          <div class="regulars" ng-click="chosenTile(quickbar.lexeme4);">
             <span ng-bind="quickbar.lexeme4.lexeme | limitTo: titleLimit"></span>
             <span ng-show="quickbar.lexeme4.lexeme.length > titleLimit">...</span>
             <img src = "{{quickbar.lexeme4.symbol.image}}"
@@ -101,10 +95,8 @@
                   style="width:40px;height:40px">
               </div>
               <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
-              <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="width:15%;float:right;margin-top:5px;display:block;margin-right:-24%" ng-show="activeChat && !callEvent"/>
 
-              <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="width:14%;float:right;margin-top:-15px;display:block;margin-right:-23%" ng-show="activeChat && callEvent"/>
-
+              <img ng-src="img/chat_buddies/{{selectedBuddy}}" style="width:12%;float:right;margin-top:-15px;display:block;margin-right:-10.5rem" ng-show="activeChat"/>
             </div>
           </div>
 
@@ -112,7 +104,7 @@
             <div class="tile-section-border">
               <span ng-repeat="row in rows">
                 <div class="tile" ng-repeat="col in columns"
-                  ng-click="clickTile(board.symbols[col+row]); sayWord();"
+                  ng-click="clickTile(board.symbols[col+row]);"
                   ng-class="{ lightYellow: board.symbols[col+row].word_class=='pronoun', lightBlue: board.symbols[col+row]==selectedIndex }";>
                   <span ng-show="filled_tiles.indexOf(col+row)!=-1">
                     <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}</p>
@@ -126,7 +118,7 @@
           </div>
 
           <div class="col col-40" id="board-section">
-              <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="chosenBoard($index); sayWord()">
+              <div class="boards" ng-repeat="userBoard in userBoards | sliceArr:start:end" ng-click="chosenBoard($index);">
                 <p style="position:fixed; z-index:3; margin-left:15px;" ng-model="titleLimit">{{userBoard.board.title | limitTo: titleLimit}} <span ng-show="boardObj.board.name.length > titleLimit">...</span></p>
 
                 <img ng-if="userBoard.board.image" ng-src="{{userBoard.board.image}}" alt="{{userBoard.board.title}}" style="width:65%; height:65%; position:relative; z-index:2; margin-bottom:-50px;"\>
@@ -144,7 +136,7 @@
             <img src="img/new_dev_assets/home.png" style="margin-left:15px; margin-top:12px;" />
           </div>
         </div>
-
+        
         <div class="col col-60">
           <div class="button-circle pull-left"
            on-double-tap="handlerTap('bell');"
