--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -61,33 +61,33 @@
         </div>
 
          <div class="regulars" ng-click="chosenTile(quickbar.lexeme); sayWord();">
-            <span ng-bind="quickbar.lexeme.lexeme | limitTo: titleLimit"></span>
-            <span ng-show="quickbar.lexeme.lexeme.length > titleLimit">...</span>
+            {{ quickbar.lexeme.lexeme | limitTo: titleLimit }}
             <br />
-            <img src = "{{quickbar.lexeme.symbol.image}}"
+            <img  src="{{quickbar.lexeme.symbol.image}}"
+              ng-if="quickbar.lexeme.symbol.image"
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme2);sayWord();">
-            <span ng-bind="quickbar.lexeme2.lexeme | limitTo: titleLimit"></span>
-            <span ng-show="quickbar.lexeme2.lexeme.length > titleLimit">...</span>
+          <div class="regulars" ng-click="chosenTile(quickbar.lexeme2); sayWord();">
+            {{ quickbar.lexeme2.lexeme | limitTo: titleLimit }}
             <br />
-            <img src = "{{quickbar.lexeme2.symbol.image}}"
+            <img src="{{quickbar.lexeme2.symbol.image}}"
+              ng-if="quickbar.lexeme2.symbol.image"
               style="width:40px;height:40px">
           </div>
 
-          <div class="regulars" ng-click="chosenTile(quickbar.lexeme3);sayWord();">
-            <span ng-bind="quickbar.lexeme3.lexeme | limitTo: titleLimit"></span>
-            <span ng-show="quickbar.lexeme3.lexeme.length > titleLimit">...</span>
+          <div class="regulars" ng-click="chosenTile(quickbar.lexeme3); sayWord();">
+            {{ quickbar.lexeme3.lexeme | limitTo: titleLimit }}
             <br />
             <img src = "{{quickbar.lexeme3.symbol.image}}"
+              ng-if="quickbar.lexeme3.symbol.image"
               style="width:40px;height:40px">
           </div>
 
           <div class="regulars" ng-click="chosenTile(quickbar.lexeme4); sayWord();">
-            <span ng-bind="quickbar.lexeme4.lexeme | limitTo: titleLimit"></span>
-            <span ng-show="quickbar.lexeme4.lexeme.length > titleLimit">...</span>
-            <img src = "{{quickbar.lexeme4.symbol.image}}"
+            {{ quickbar.lexeme4.lexeme | limitTo: titleLimit }}
+            <img src="{{quickbar.lexeme4.symbol.image}}"
+              ng-if="quickbar.lexeme4.symbol.image"
               style="width:40px;height:40px">
           </div>
         </div>
@@ -96,8 +96,9 @@
           <div class="word-builder">
             <div class="word-builder-input" style="margin-left:-15px">
               <div class="tile" ng-repeat="symbol in selectedTiles">
-                {{ symbol.word }}<br>
-                <img src = "{{symbol.symbol.image}}"
+                {{ symbol.word }} <br/>
+                <img src="{{symbol.symbol.image}}"
+                  ng-if="symbol.symbol.image"
                   style="width:40px;height:40px">
               </div>
               <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
@@ -114,11 +115,10 @@
                 <div class="tile" ng-repeat="col in columns"
                   ng-click="clickTile(board.symbols[col+row]); sayWord();"
                   ng-class="{ lightYellow: board.symbols[col+row].word_class=='pronoun', lightBlue: board.symbols[col+row]==selectedIndex }";>
-                  <span ng-show="filled_tiles.indexOf(col+row)!=-1">
+                  <span ng-show="filled_tiles.symbols.indexOf(col+row)!=-1">
                     <p class="tile-words">{{board.symbols[col+row].word | limitTo: titleLimit}}</p>
-                      <!-- <span ng-show="board.symbols[col+row].word.length > titleLimit">...</span> -->
-                      <br>
-                    <img src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
+                    <br>
+                    <img ng-if="board.symbols[col+row].symbol.image" src="{{board.symbols[col+row].symbol.image}}" style="width:40px;height:40px">
                   </span>
                 </div>
               </span>
