--- a/aac-ionic/www/templates/main.html
+++ b/aac-ionic/www/templates/main.html
@@ -90,7 +90,8 @@
         <div class="col col-90" id="full-body">
           <div class="word-builder">
             <div class="word-builder-input" style="margin-left:-15px">
-              <div class="tile" ng-repeat="symbol in selectedTiles">
+              <div class="tile" ng-repeat="symbol in selectedTiles"
+                ng-click="clickTile(board.symbols[col+row]);">
                 <p ng-bind="symbol.label? (symbol.label | limitTo: titleLimit) : (symbol.word | limitTo: titleLimit)"
                 class="tile-words"></p>
                 <img src = "{{symbol.symbol.image}}"
@@ -98,8 +99,8 @@
                   style="width:40px;height:40px">
               </div>
               <img ng-src="{{ imageUrl }}" id="home-section" ng-click="deleteLastTile()" on-tap="onTap()"/>
-
-              <img ng-src="img/chat_buddies/{{selectedBuddy}}" style="width:12%;float:right;margin-top:-15px;display:block;margin-right:-10.5rem" ng-show="activeChat"/>
+              <img ng-src="img/chat_buddies/{{selectedBuddy.think}}" style="width:15%;float:right;margin-top:5px;display:block;margin-right:-24%" ng-show="activeChat && !callEvent"/>		
+              <img ng-src="img/chat_buddies/{{selectedBuddy.talk}}" style="width:14%;float:right;margin-top:-15px;display:block;margin-right:-23%" ng-show="activeChat && callEvent"/>
             </div>
           </div>
 
